examples/kube-in-action/ch5/kubia.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia
spec:
  containers:
  # - image: djholms/kubia
  - image: luksa/kubia
    name: kubia
    ports:
    - name: http
      containerPort: 8080
    - name: https
      containerPort: 8443
